src/assets/stylesheets/components/_header.scss
@import "./../rtl-support";

.header {
  width: 100%;
  background: $white;
  top: 0;
  @extend .box-shadow;
  z-index: 3;
  line-height: 1;

  .sub-header {
    background: $cool-gray;
    height: 80px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;

    .legend {
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: center;
      @include right(0px);
      color: $black;
      z-index: 3;
      cursor: default;
      list-style: none;
      #phase0,
      .phase0,
      #phase1,
      .phase1,
      #phase2,
      .phase2,
      #phase3,
      .phase3,
      #phase4,
      .phase4,
      #phase5,
      .phase5,
      #phasenull,
      .phasenull {
        border-radius: 0px;
      }
      .l-box {
        text-align: center;
        height: 23px;
        width: 23px;
        line-height: 1.75;
        font-size: 13px;
        font-family: "InterRegular", sans-serif;
      }
      .legend-desc {
        color: $white;
        display: inline-block;
        padding: 5px 0;
        @include padding-right(20px);
        font-family: "InterBold", sans-serif;
      }
    }
  }

  .sub-header-title-and-description {
    display: flex;
    flex-direction: row;
    align-items: center;
  }

  .sub-header-title {
    max-width: 320px;
    height: auto;
    @include margin-left(20px);
    font-weight: 700;
    font-size: 24px;
    color: $white;
  }

  .sub-header-description {
    max-width: 500px;
    height: auto;
    @include margin-left(60px);
    font-weight: 400;
    font-size: 14px;
    line-height: 17px;
    color: $white;
  }

  .sub-header-map-legend {
    @include margin-right(20px);
  }

  .header-width {
    margin: 0 auto;
    padding: 0 20px;
  }

  .hd-element {
    padding: 15px 0px;
    display: inline-block;
    min-width: 140px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    box-sizing: border-box;
  }

  a {
    @extend .header-regular;
  }

  .hide {
    display: none;
  }
}

.header-elements {
  display: flex;
  width: 100%;
  justify-content: space-between;

  .left-aligned-headers {
    display: flex;
    .header-link {
      font-family: "InterBold", sans-serif;
    }
  }

  .logo-name {
    cursor: pointer;
    @include margin-right(11vw);
  }

  a {
    border-bottom: 4px solid transparent;
  }

  .router-link-exact-active {
    border-bottom: 4px solid $logo-blue;
    background: $selected-menu;
    color: $white;
  }

  .language-selector {
    @extend .copy;
    height: 31px;
    color: $black;
    background-color: white;
    width: 100px;
    @include padding-left(5px);
    border: $table-border;
    -webkit-appearance: none;
    appearance: none;
    -moz-appearance: none;
  }

  .drop-down {
    @include margin-left(5px);
    min-width: 100px;
  }

  .drop-down:after {
    content: "\F078";
    font: normal normal normal 12px/1 FontAwesome;
    position: relative;
    pointer-events: none;
    width: 0;
    color: $black;
    @include right(20px);
  }

  .header-language-selector {
    align-self: center;
  }
}

.header-elements__right {
  display: inline-flex;
  width: 15%;
}

@media print {
  .header {
    display: none;
  }
}

@media (max-width: $mobile-width) {
  .header {
    .sub-header-description {
      display: none;
    }
    .sub-header {
      display: flex;
      flex-direction: row;
    }
    .sub-header-title {
      font-size: 18px;
      padding-right: 5px;
    }
    .sub-header-map-legend {
      width: 45%;
    }
    .hd-element:nth-child(3) {
      display: none;
    }
    .hd-element:nth-child(4) {
      display: none;
    }
    .hd-element:nth-child(5) {
      display: none;
    }
    .hd-element:nth-child(6) {
      display: none;
    }
    .header-language-selector {
      display: none;
    }
  }
}

